3_Complements/3.2_Problemes/catalog-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: catalog-gateway
  namespace: formation
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "catalog.formation.io"
    port:
      number: 80
      name: http
      protocol: HTTP
