3_Complements/3.2_Problemes/catalog-virtualservice-subsets-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-v1-v2
  namespace: formation
spec:
  hosts:
  - "catalog.formation.io"
  gateways:
  - "catalog-gateway"
  http:
  - route:
    - destination:
        host: catalog.formation.svc.cluster.local
        subset: version-v1
        port:
          number: 80
      weight: 20
    - destination:
        host: catalog.formation.svc.cluster.local
        subset: version-v2
        port:
          number: 80
      weight: 80
